# local_ssh

./: .gitignore  CMakeLists.txt  package.xml  read_csv.h
include/: labelimg_xml_reader.h  local_feature_map.h  preprocess.h  voronoi_skeleton_points.h
include/tiny_dnn/lossfunctions/: loss_function.h
model/: LeNet-model-angles-regression_30_good  LeNet-model-rects-good-good  LeNet-model-rects-regression-good-angle0.2-0.8  LeNet-model-rects-regression-with-angle-good  LeNet-model-rects-regression-with-angle-good2  LeNet-model-rects-relatively-good
model/sudoku/: LeNet-model-angles-regression  VGGNet-model-rects-regression
model/used-1/: LeNet-model-rects-regression
msg/: Feature.msg  Features.msg
script/: enhance.py  label_direction.py  数据生成方式
src/: detect_test.cpp  gateway_cnn_training.cpp  gateway_training.cpp  gateway_training_gvg.cpp  heatmap_data_generation.cpp  heatmap_training.cpp  label_directions.cpp  real_time_prediction.cpp  rect_classification.cpp  rect_classify_predict_angle.cpp  rename_imgs.cpp  save_pcd_jpgs.cpp  test.cpp  test_svm.cpp
